Adding shrinkwrap script to build chain

--- a/bin/build
+++ b/bin/build
@@ -1,9 +1,8 @@
 #!/usr/bin/env php
 <?php
-
 $pluginName = 'dtx_cinema_calendar';
 $version = trim(shell_exec('git describe --always --dirty'));
 
-shell_exec("php src/${pluginName}.php > out/${pluginName}-${version}.txt");
-
+shell_exec("php build/shrinkwrap.php src/${pluginName}.php > build/cache/${pluginName}.php");
+shell_exec("php build/cache/${pluginName}.php > out/${pluginName}-${version}.txt");
 ?>
